# ferris

./: .env  .gitignore  Cargo.toml
src/: globals.rs  main.rs  router.rs  routes.rs  state.rs  utils.rs
src/actors/: mod.rs  song_coordinator.rs  video_downloader.rs  video_searcher.rs
src/lib/: dash_processor.rs  yt_downloader.rs  yt_searcher.rs
src/routes/: admin.rs  healthcheck.rs  karaoke.rs  sse.rs  streaming.rs  sys.rs
src/utils/: binary.rs  dash_processor.rs  mod.rs  yt_downloader.rs  yt_searcher.rs
